# clis

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: generate_app_icon.py  generate_installer_assets.py  run-tauri.mjs
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppToolbar.tsx  CommandForm.tsx  GroupCombobox.tsx  LogPanel.tsx  TaskCard.tsx  TaskList.tsx  TerminalSelect.tsx  WindowToolbar.tsx
src/lib/: commandValidation.ts  format.ts  groupOrderSettings.ts  localDatabase.ts  taskStorage.ts  terminalSettings.ts  themeSettings.ts
